# fadroma

./: .dockerignore  .drone.yml  .env  .eslintignore  .eslintrc  .gitignore  .gitmodules  .npmignore  .npmrc  CHANGELOG-RUST.md  CHANGELOG-TS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Fadroma.spec.ts.md  Fadroma.ts  FadromaCommands.ts  FadromaConfig.ts  FadromaConsole.ts  GUIDE.ts.md  GettingStarted.md  GettingStarted.ts.md  INTERNALS.ts.md  MAINTAINERS.md  PUBLISH.md  README.md  ROADMAP.md  ROADMAP.ts.md  SPEC.ts.md  TESTING.ts.md  TODO.md  TROUBLESHOOTING.md  Test.ts.md  Workspace.toml  _Cargo.toml  agent  agent.html  (+94 more)
core/: Cargo.toml  lib.rs
crates/fadroma/: .old.readme.md  Cargo.toml  README.md  lib.rs
crates/fadroma-auth/: Cargo.toml  README.md  admin.rs  composable_admin.rs  lib.rs  multi_admin.rs  permit.rs  vk.rs  vk_auth.rs
crates/fadroma-composability/: Cargo.toml  README.md  composable.rs  composable_permit.rs  composable_test.rs  core.rs  core_test.rs  dispatch.rs  lib.rs  response.rs
crates/fadroma-compose/: Cargo.toml  README.md  lib.rs  macros.rs  model.rs  parse.rs  write.rs
crates/fadroma-derive-canonize/: Cargo.toml
crates/fadroma-derive-canonize/src/: common.rs  enum.rs  generic.rs  generic_enum.rs  lib.rs  non_generic.rs
crates/fadroma-derive-canonize/tests/: derive.rs  derive_generic.rs  enum.rs
crates/fadroma-derive-contract/: Cargo.toml  README.md
crates/fadroma-derive-contract/src/: contract.rs  lib.rs
crates/fadroma-derive-contract/tests/: custom_impl.rs  deserialize_flat.rs  entry.rs  interface.rs
crates/fadroma-derive-serde/: Cargo.toml
crates/fadroma-derive-serde/src/: lib.rs  tests.rs
crates/fadroma-ensemble/: Cargo.toml  README.md  bank.rs  ensemble.rs  env.rs  lib.rs  querier.rs  revertable.rs  storage.rs  tests.rs
crates/fadroma-ensemble/src/: bank.rs  block.rs  error.rs  event.rs  execution_state.rs  lib.rs  querier.rs  response.rs  staking.rs
crates/fadroma-killswitch/: Cargo.toml  killswitch.rs
crates/fadroma-platform-scrt/: Cargo.toml  README.md  addr.rs  callback.rs  lib.rs  link.rs
crates/fadroma-platform-terra/: Cargo.toml
crates/fadroma-proc-derive/: Cargo.toml  README.md
crates/fadroma-proc-derive/src/: args.rs  attr.rs  contract.rs  lib.rs
crates/fadroma-proc-derive/tests/: custom_impl.rs  deserialize_flat.rs  entry.rs  interface.rs
crates/fadroma-snip20-impl/: Cargo.toml  SNIP20Contract.ts  SNIP20Queries.ts  SNIP20Transactions.ts  Snip20Client.ts  Snip20Contract.ts  api.ts  package.json
crates/fadroma-snip20-impl/schema/: handle_msg.d.ts
crates/fadroma-snip20-impl/src/: batch.rs  lib.rs  msg.rs  receiver.rs  snip20.rs  state.rs  tests.rs  transaction_history.rs  utils.rs
crates/fadroma-storage/: Cargo.toml  iterable.rs  lib.rs  storage.rs  traits1.rs  traits2.rs
crates/fadroma/admin/: mod.rs  simple.rs  (+1 more)
declare-contract/: Cargo.toml  lib.rs
doc/example/: Cargo.toml  index.js  package.json
ensemble/: Cargo.toml  README.md
ensemble/src/: ensemble.rs  env.rs  state.rs  storage.rs
examples/admin/: Cargo.toml
examples/derive-contract-interface/: Cargo.toml
examples/echo/: Cargo.toml  echo.rs
examples/ensemble/: Cargo.toml
lib/: Cargo.toml  admin.rs  admin_multi.rs  base.rs  composable.rs  composable_admin.rs  composable_core.rs  composable_core_test.rs  contract.rs  contract_binding.rs  contract_impl.rs  contract_state.rs  decimal.rs  dispatch.rs  icc.rs  lib.rs  response_builder.rs  scrt.rs  scrt_addr.rs  scrt_auth.rs  scrt_auth_vk.rs  scrt_callback.rs  scrt_contract.rs  scrt_contract_api.rs  scrt_contract_binding.rs  scrt_contract_harness.rs  scrt_contract_state.rs  scrt_decimal.rs  scrt_icc.rs  scrt_link.rs  scrt_migrate.rs  scrt_migrate_types.rs  scrt_permit.rs  scrt_snip20_api.rs  scrt_storage.rs  scrt_storage_traits.rs  scrt_storage_traits2.rs  scrt_uint256.rs  scrt_utils.rs  scrt_utils_convert.rs  (+6 more)
lib/admin/: mod.rs
lib/bin_serde/: byte_len.rs  cw.rs
lib/composable-admin/: Cargo.toml  admin.rs  multi_admin.rs
lib/composable-snip20/: Cargo.toml  api.ts  package.json
lib/core/: callback.rs  link.rs
lib/crypto/: mod.rs
lib/declare_contract/: mod.rs  scrt_contract.rs  scrt_contract_binding.rs  scrt_contract_state.rs
lib/derive-contract/: Cargo.toml
lib/ensemble/: README.md  block.rs  display.rs  ensemble.rs  event.rs  execution_state.rs  mod.rs  querier.rs  response.rs  state.rs  storage.rs
lib/storage/: item_space.rs  iterable.rs  single_item.rs
lib/tokens/: mod.rs
scrt/: Cargo.toml  README.md  lib.rs  package.json  scrt-base.ts  scrt-connection.ts  scrt-identity.ts  scrt-mocknet.test.ts  scrt-mocknet.ts  scrt.test.ts  scrt.ts  scrt_addr.rs  scrt_icc_callback.rs  scrt_icc_link.rs  scrt_storage_traits.rs  scrt_utils_uint256.rs  snip-20.ts  snip-721.test.ts  snip-721.ts  tsconfig.json
scrt-callback/: Cargo.toml  lib.rs
scrt-migrate/: Cargo.toml  checks.rs  lib.rs  storage.rs  types.rs
scrt-snip20/: Cargo.toml  README.md
scrt-snip20/.cargo/: config
scrt-snip20/src/: batch.rs  contract.rs  lib.rs  msg.rs  receiver.rs  snip20.rs  snip20_tests.rs  snip21_tests.rs  snip22_tests.rs  state.rs  tests.rs  tests_shared.rs  transaction_history.rs  utils.rs
scrt-storage/: Cargo.toml  lib.rs  traits2.rs
scrt-utils/: Cargo.toml  README.md
scrt-utils/src/: convert.rs  crypto.rs  data.rs  lib.rs  storage.rs  u256_math.rs  uint256.rs  viewing_key.rs
scrt/addr/: Cargo.toml  README.md
scrt/admin/: README.md
scrt/auth/: Cargo.toml  README.md  scrt_auth_test.rs
scrt/base/: Cargo.toml  README.md  lib.rs
scrt/composable-admin/: Cargo.toml
scrt/composable-snip20/: Cargo.toml
scrt/contract/: Cargo.toml  README.md  contract_harness.rs
scrt/core/: Cargo.toml  README.md  lib.rs  scrt_core.rs
scrt/harness/: Cargo.toml  README.md
scrt/icc/: Cargo.toml  README.md  scrt_icc.rs  scrt_icc_callback.rs  scrt_icc_link.rs
scrt/migrate/: Cargo.toml  README.md  scrt_migrate_checks.rs  storage.rs
scrt/require-admin/: Cargo.toml
scrt/storage/: Cargo.toml  README.md  lib.rs  storage.rs
scrt/utils/: Cargo.toml
(+110711 files in other folders)
