[workspace]
members = [
  "crates/fadroma",
  "crates/fadroma-dsl",
  "crates/fadroma-proc-auth",
  "crates/fadroma-proc-message",
  "crates/fadroma-derive-serde",
  "crates/fadroma-derive-canonize",
  "examples/*"
]

#[profile.release]
#opt-level = 3
#debug = false
#rpath = false
#lto = true
#debug-assertions = false
#codegen-units = 1
#panic = 'abort'
#incremental = false
#overflow-checks = true
