[workspace]
resolver = "2"
members = [
  "crates/fadroma",
  "crates/fadroma-dsl",
  "crates/fadroma-proc-auth",
  "crates/fadroma-derive-serde",
  "crates/fadroma-derive-canonize",
  "examples/admin",
  "examples/derive-contract-components",
  "examples/derive-contract-interface",
  "examples/ensemble",
  "examples/factory",
  "examples/factory-shared",
  "examples/factory-product",
  #"examples/external",
  #"examples/legacy",
  "examples/killswitch",
  "examples/kv",
]

#[profile.release]
#opt-level = 3
#debug = false
#rpath = false
#lto = true
#debug-assertions = false
#codegen-units = 1
#panic = 'abort'
#incremental = false
#overflow-checks = true
