[package]
name = "fadroma"
version = "0.9.0"
edition = "2021"
license = "AGPL-3.0"
keywords = ["blockchain", "cosmos", "cosmwasm", "smart-contract"]
description = "Distributed application groundwork maintained at Hack.bg"
repository = "https://github.com/hackbg/fadroma"
readme = "README.md"
authors = [
  "Adam A. <adam@hack.bg>",
  "Asparuh Kamenov <aakamenov@hack.bg>",
  "denismaxim0v <denis_maxim0v@protonmail.com>",
  "Chris Ricketts <chris.ricketts@steribar.com>",
  "Tibor Hudik <tibor@barrage.net>",
  "Wiz1991 <wizoftime92@gmail.com>",
  "hydropump3 <3ki2fiay@anonaddy.me>",
  "Itzik <itzik@keytango.io>"
]

[lib]
path = "crates/fadroma/lib.rs"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = ["scrt"]
scrt = ["secret-cosmwasm-std"]
scrt-staking = ["secret-cosmwasm-std/staking"]
permit = ["scrt", "ripemd", "sha2", "remain", "bech32"]
vk = ["scrt", "crypto", "subtle"]
crypto = ["rand_core", "rand_chacha", "sha2"]
snip20 = ["scrt", "permit", "vk"]

# Can't be used on the stable channel
#backtraces = [ "secret-cosmwasm-std/backtraces" ]
staking = ["secret-cosmwasm-std/staking"]

[dependencies]
# Supported platforms
secret-cosmwasm-std = { version = "1.1.11", default-features = false, optional = true }

# Procedural macro crates
fadroma-dsl = { version = "0.8.0", path = "./crates/fadroma-dsl" }
fadroma-derive-canonize = { version = "0.3.5", path = "./crates/fadroma-derive-canonize" }
fadroma-derive-serde = { version = "0.3.0", path = "./crates/fadroma-derive-serde" }
fadroma-proc-auth = { version = "0.1.1", path = "./crates/fadroma-proc-auth" }

# Dependencies
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
schemars = "0.8.11"
oorandom = { optional = true, version = "11.1.3" }
primitive-types = { optional = true, version = "0.9.1", default-features = false }
rand_chacha = { optional = true, version = "0.3.1", default-features = false }
rand_core = { optional = true, version = "0.6.4", default-features = false }
remain = { optional = true, version = "0.2.6" }
ripemd = { optional = true, version = "0.1.3" }
bech32 = { optional = true, version = "0.9.1" }
sha2 = { optional = true, version = "0.10.6", default-features = false }
subtle = { optional = true, version = "2.4.1", default-features = false }
anyhow = { optional = true, version = "1.0.65" }
time = { optional = true, version = "0.3.17" }

# Enable iterator for testing (not supported in production)
[target.'cfg(not(target_arch="wasm32"))'.dependencies]
secret-cosmwasm-std = { version = "1.1.11", default-features = false, features = ["iterator", "random"], optional = true }

[dev-dependencies]
criterion = "0.4.0"
bincode2 = "2.0.1"
proptest = "1.1.0"

[[bench]]
name = "bench_main"
harness = false
