[package]
name = "declare-contract"
version = "0.1.0"
authors = ["Adam Avramov <asparuh@hack.bg>"]
edition = "2018"

[lib]
name = "declare-contract"
path = "lib.rs"

[dev-dependencies]
cosmwasm-std     = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print", features = ["debug-print"] }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = "1.0.66"
schemars = "0.7"
