[package]
name    = "fadroma"
version = "0.1.0"
edition = "2018"
authors = ["Asparuh Kamenov <aakamenov@hack.bg>",
           "Adam A. <adam@hack.bg>"]

[lib]
name = "fadroma"
path = "lib.rs"

[dependencies]
cosmwasm-schema   = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
cosmwasm-std      = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
cosmwasm-storage  = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
primitive-types   = { version = "0.9.1", default-features = false }
rand_chacha       = { version = "0.2.2", default-features = false }
rand_core         = { version = "0.5.1", default-features = false }
schemars          = { version = "0.7" }
secret-toolkit    = { git = "https://github.com/enigmampc/secret-toolkit", branch = "debug-print" }
#secret-toolkit   = { git = "https://github.com/hackbg/secret-toolkit", rev = "9a33d7b" }
serde             = { version = "1.0.103", default-features = false, features = ["derive"] }
sha2              = { version = "0.9.1", default-features = false }
snafu             = { version = "0.6.3" }
subtle            = { version = "2.4.0", default-features = false }
derive-contract   = { path = "./derive-contract" }
require-admin     = { path = "./composable-admin/require-admin" }

# Terra
#cosmwasm-std     = { version = "0.15.0" }
#cosmwasm-storage = { version = "0.15.0" }
#cw-storage-plus  = { version = "0.7.0", features = ["iterator"] }
#cw20             = { version = "0.7.0" }
#schemars         = "0.8.3"
#serde            = { version = "1.0.103", default-features = false, features = ["derive"] }
#thiserror        = { version = "1.0.24" }

[features]
default    = [ "scrt" ]
browser    = [ "backtraces" ]
backtraces = [ "cosmwasm-std/backtraces", "snafu/backtraces" ]
harness    = []
derive     = []
scrt       = []
terra      = []
