[package]
name    = "fadroma-scrt-migrate"
version = "0.1.0"
authors = ["Adam A. <adam@hack.bg>"]
edition = "2018"

[lib]
name = "fadroma_scrt_migrate"
path = "lib.rs"

[dependencies]
cosmwasm-std   = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
cosmwasm-utils = { path = "../scrt-utils" }
snafu          = { version = "0.6.3", features = ["backtraces"] }
serde          = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars       = "0.7"
fadroma-scrt-addr = { path = "../scrt-addr" }
