[package]
name    = "composable-snip20"
version = "0.1.0"
edition = "2018"
authors = [
  "Itzik <itzik@keytango.io>",
  "Asparuh Kamenov <aakamenov@hack.bg>",
  "Adam A. <adam@hack.bg>"
]

[dependencies]
serde    = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.7"
bincode2 = "2.0.1"
fadroma = { path = "../core", features = [
  "scrt-callback",
  "scrt-utils"
] }

[dev-dependencies]
cosmwasm-vm = { package = "cosmwasm-sgx-vm", git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }

[features]
snip21 = []
snip22 = []
