[package]
name    = "fadroma-scrt-base"
version = "0.1.0"
authors = ["Adam A. <adam@hack.bg>"]
edition = "2018"

[lib]
name = "fadroma_scrt_base"
path = "lib.rs"

[dependencies]
cosmwasm-schema  = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
cosmwasm-std     = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print", features = ["debug-print"] }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
secret-toolkit   = { git = "https://github.com/enigmampc/secret-toolkit", branch = "debug-print" }
snafu            = { version = "0.6.3", features = ["backtraces"] }
schemars         = "0.7"
#serde            = { version = "1.0.103", default-features = false, features = ["derive"] }
