[package]
name    = "fadroma-auth"
version = "0.1.0"
edition = "2018"
authors = ["Adam A. <adam@hack.bg>"]

[lib]
path = "lib.rs"

[dependencies]
fadroma-platform-scrt = { path = "../fadroma-platform-scrt" }

fadroma-derive-contract = { path = "../fadroma-derive-contract" }
fadroma-math            = { path = "../fadroma-math" }
fadroma-storage         = { path = "../fadroma-storage" }

serde = { version = "1.0.103", default-features = false, features = ["derive"] }

remain    = { version = "0.2.2"  }
ripemd160 = { version = "0.9.1"  }
secp256k1 = { version = "0.20.3" }
sha2      = { version = "0.9.1", default-features = false }
