[package]
name = "fadroma-derive-canonize"
version = "0.1.0"
authors = ["Asparuh Kamenov <asparuh@hack.bg>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0.20"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"

[dev-dependencies]
fadroma = { path = "../fadroma", default-features = false, features = ["storage"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
