[package]
name    = "fadroma-killswitch"
version = "0.1.0"
edition = "2018"
authors = ["Adam A. <adam@hack.bg>"]

[lib]
path = "killswitch.rs"

[dependencies]
fadroma-platform-scrt = { path = "../fadroma-platform-scrt" }

fadroma-auth      = { path = "../fadroma-auth" }
fadroma-auth-proc = { path = "../fadroma-auth-proc" }
fadroma-storage   = { path = "../fadroma-storage" }

serde = { version = "1.0.103", default-features = false, features = ["derive"] }
