[package]
name    = "fadroma-platform-scrt"
version = "0.1.0"
edition = "2018"
authors = [
  "Adam A. <adam@hack.bg>",
  "Asparuh Kamenov <aakamenov@hack.bg>",
]

[lib]
path = "lib.rs"

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
cosmwasm-schema = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
schemars = { version = "0.8.10" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[features]
default = []
# iterator allows us to iterate over all DB items in a given range
# optional as some merkle stores (like tries) don't support this
# given Ethereum 1.0, 2.0, Substrate, and other major projects use Tries
# we keep this optional, to allow possible future integration (or different Cosmos Backends)
iterator = ["cosmwasm-std/iterator", "cosmwasm-storage/iterator"]
# staking exposes bindings to a required staking moudle in the runtime, via new
# CosmosMsg types, and new QueryRequest types. This should only be enabled on contracts
# that require these types, so other contracts can be used on systems with eg. PoA consensus
staking = ["cosmwasm-std/staking"]
# backtraces provides much better context at runtime errors (in non-wasm code)
# at the cost of a bit of code size and performance.
backtraces = ["cosmwasm-std/backtraces"]
# Debug prints enable printing log messages to the logging system of the enclave
# from inside your contract. This will only work in enclaves compiled in SW mode
# and loading the contract for execution will fail if this is used a HW mode
# enclave. This is done in order to provent leaking secrets in production.
# debug-print = ["secret-cosmwasm-std/debug-print"]
