[package]
name    = "fadroma-platform-terra"
version = "0.1.0"
edition = "2018"
authors = [
  "Adam A. <adam@hack.bg>",
  "Asparuh Kamenov <aakamenov@hack.bg>",
]

[lib]
path = "terra.rs"

[dependencies]
# TODO put versions of cosmwasm here
#cosmwasm-schema   = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
#cosmwasm-std      = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
#cosmwasm-storage  = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print", features = ["iterator"] }
#schemars          = { version = "0.7" }
#secret-toolkit    = { git = "https://github.com/enigmampc/secret-toolkit", branch = "debug-print" }
#serde             = { version = "1.0.103", default-features = false, features = ["derive"] }
#snafu             = { version = "0.6.3" }

