[package]
name    = "fadroma-platform-terra"
version = "0.1.0"
edition = "2018"
authors = [
  "Adam A. <adam@hack.bg>",
  "Asparuh Kamenov <aakamenov@hack.bg>",
]

[lib]
path = "terra.rs"

[dependencies]
# TODO put versions of cosmwasm here
#cosmwasm-schema   = { git = "https://github.com/hackbg/SecretNetwork", tag = "v1.0.4-debug-print" }
#cosmwasm-std      = { git = "https://github.com/hackbg/SecretNetwork", tag = "v1.0.4-debug-print" }
#cosmwasm-storage  = { git = "https://github.com/hackbg/SecretNetwork", tag = "v1.0.4-debug-print", features = ["iterator"] }
#schemars          = { version = "0.7" }
#secret-toolkit    = { git = "https://github.com/hackbg/secret-toolkit", branch = "debug-print" }
#serde             = { version = "1.0.103", default-features = false, features = ["derive"] }
#snafu             = { version = "0.6.3" }


# Terra
#cosmwasm-std     = { version = "0.15.0" }
#cosmwasm-storage = { version = "0.15.0" }
#cw-storage-plus  = { version = "0.7.0", features = ["iterator"] }
#cw20             = { version = "0.7.0" }
#schemars         = "0.8.3"
#serde            = { version = "1.0.103", default-features = false, features = ["derive"] }
#thiserror        = { version = "1.0.24" }
