[package]
name    = "fadroma-proc-derive"
version = "0.1.0"
authors = ["Asparuh Kamenov <asparuh@hack.bg>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0.20"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"

[dev-dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0" }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
schemars = "0.8.11"
serde_json = "1.0.66"
