[package]
name = "fadroma-proc-derive"
version = "0.7.0"
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/hackbg/fadroma"
description = "DSL for generating CosmWasm contract boilerplate and enabling code composition"
authors = ["Asparuh Kamenov <asparuh@hack.bg>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0.20"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"

[dev-dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0" }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
schemars = "0.8.11"
serde_json = "1.0.66"
