[package]
name    = "fadroma-snip20-impl"
version = "0.1.0"
edition = "2018"
authors = [
  "Itzik <itzik@keytango.io>",
  "Asparuh Kamenov <aakamenov@hack.bg>",
  "Adam A. <adam@hack.bg>"
]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
#default = ["debug-print"]
#backtraces  = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
#debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
fadroma-platform-scrt = { path = "../fadroma-platform-scrt" }
secret-toolkit = { version = "0.3.0", default-features = false, features = ["storage"] }

fadroma-auth    = { path = "../fadroma-auth" }
fadroma-math    = { path = "../fadroma-math" }
fadroma-storage = { path = "../fadroma-storage" }

serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.7"
bincode2 = "2.0.1"
