[package]
name    = "fadroma-storage"
version = "0.1.0"
edition = "2018"
authors = [
  "Adam A. <adam@hack.bg>",
  "Asparuh Kamenov <aakamenov@hack.bg>",
  "Tibor Hudik <tibor@barrage.net>"
]

[lib]
path = "lib.rs"

[dependencies]
fadroma-platform-scrt = { path = "../fadroma-platform-scrt" }
serde                 = { version = "1.0.103", default-features = false, features = ["derive"] }
